Add commons module

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ allprojects {
 
     }
 
+    if (name != 'commons') {
+        dependencies {
+            implementation(project(":commons"))
+        }
+    }
+
 }
 
 dependencies {
