--- a/security/build.gradle
+++ b/security/build.gradle
@@ -1,4 +1,11 @@
 dependencies {
+    implementation(project(':db'))
+
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation "org.springframework:spring-webmvc:5.2.7.RELEASE"
+    implementation "jakarta.servlet:jakarta.servlet-api:4.0.4"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.11.1"
+
     testImplementation 'org.springframework.security:spring-security-test'
 }
