--- a/services/build.gradle
+++ b/services/build.gradle
@@ -5,17 +5,19 @@ ext {
 
 dependencies {
     implementation(project(':db'))
+    implementation(project(':security'))
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.11.1"
+    implementation 'org.springframework.security:spring-security-core:5.4.1'
 
     compileOnly "org.mapstruct:mapstruct:$mapstructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
-
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.11.1"
 }
-
-compileJava {
-    options.compilerArgs = [
-            '-Amapstruct.defaultComponentModel=spring'
-    ]
-}
-
+//
+//compileJava {
+//    options.compilerArgs = [
+//            '-Amapstruct.defaultComponentModel=spring'
+//    ]
+//}
+//
