--- a/db/build.gradle
+++ b/db/build.gradle
@@ -1,7 +1,12 @@
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+//    implementation 'org.springframework.boot:spring-boot-starter'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation "org.springframework.data:spring-data-commons:2.3.1.RELEASE"
+    implementation "org.springframework.data:spring-data-jdbc:2.0.1.RELEASE"
+    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3"
+
     implementation 'org.liquibase:liquibase-core'
     runtimeOnly 'org.postgresql:postgresql'
 }
