--- a/db/src/main/resources/migrations/1.0/_changelog-cumulative.yml
+++ b/db/src/main/resources/migrations/1.0/_changelog-cumulative.yml
@@ -18,3 +18,11 @@ databaseChangeLog:
         - sqlFile:
             path: DOCTOR-MAP-APP-1-20201121-2015.sql
             relativeToChangelogFile: true
+  - changeSet:
+      id: DDOCTOR-MAP-APP-1-20201125-1615
+      author: egor_proskuryakov
+      comment: Add illness table
+      changes:
+        - sqlFile:
+            path: DOCTOR-MAP-APP-1-20201125-1615.sql
+            relativeToChangelogFile: true
