--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,7 @@ include 'db'
 include 'services'
 include 'security'
 include 'commons'
+include 'geocoding'
+include 'geocoding'
+include 'geocoding'
 
