Add and disable sql logger

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,15 @@ nominatim:
   url:
     search: https://nominatim.openstreetmap.org/search/
     start-param: ?format=geojson&limit=1
+
+#logging:
+#  level:
+#    org:
+#      springframework: WARN
+#    ru:
+#      vsu:
+#        cs:
+#          app:
+#            db:
+#              repositories:
+#                SickRepository: DEBUG
