--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 
     implementation(project(':services'))
     implementation(project(':security'))
-
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
